--- a/files/新包正式包/styles.css
+++ b/files/新包正式包/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:relative;
   left:-182px;
-  width:3038px;
+  width:3048px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -21500,4 +21500,104 @@
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
+}
+#u550_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:22px;
+}
+#u550 {
+  border-width:0px;
+  position:absolute;
+  left:3176px;
+  top:5773px;
+  width:25px;
+  height:22px;
+  display:flex;
+}
+#u550 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u550_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u551_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:15px;
+  height:15px;
+}
+#u551 {
+  border-width:0px;
+  position:absolute;
+  left:3128px;
+  top:5900px;
+  width:15px;
+  height:15px;
+  display:flex;
+}
+#u551 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u551_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u552_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:119px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:11px;
+  color:#499550;
+}
+#u552 {
+  border-width:0px;
+  position:absolute;
+  left:3111px;
+  top:5924px;
+  width:119px;
+  height:18px;
+  display:flex;
+  font-size:11px;
+  color:#499550;
+}
+#u552 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u552_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
 }
